feat: Add university CRUD
